--- a/.config
+++ b/.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_k2p=y
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_k2p=y
+CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_k2p="update"
 
 CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
