--- a/k2p.config
+++ b/k2p.config
@@ -1,5 +1,5 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
-CONFIG_PACKAGE_
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
