--- a/k2p.config
+++ b/k2p.config
@@ -1,7 +1,10 @@
 #CONFIG_TARGET_x86=y
 #CONFIG_TARGET_x86_64=y
 #CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7621=y
+#CONFIG_TARGET_ramips=y
+#CONFIG_TARGET_ramips_mt7621=y
 #CONFIG_TARGET_ramips_mt7621_DEVICE_k2p=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
+CONFIG_PACKAGE_luci-app-jd-dailybonus=y
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
+CONFIG_PACKAGE_luci-openwrt-bypass=y
