--- a/k2p.config
+++ b/k2p.config
@@ -8,3 +8,4 @@
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 CONFIG_PACKAGE_luci-openwrt-bypass=y
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
