--- a/x86_64.config
+++ b/x86_64.config
@@ -9,6 +9,6 @@ CONFIG_PACKAGE_libuv=y
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
-CONFIG_PACKAGE_luci-
+CONFIG_PACKAGE_luci-passwall=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_node=y
