--- a/.github/workflows/K2P_openwrt.yml
+++ b/.github/workflows/K2P_openwrt.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/junpermain/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/junpermain/openwrt
+  REPO_BRANCH: openwrt-19.07
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: k2p.config
   DIY_P1_SH: diy-part1.sh
