--- a/x86_64.config
+++ b/x86_64.config
@@ -1,14 +1,11 @@
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
-CONFIG_NODEJS_14=y
-CONFIG_NODEJS_ICU_NONE=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_libuv=y
-CONFIG_PACKAGE_luci-app-jd-dailybonus=y
-CONFIG_PACKAGE_luci-app-netdata=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_netdata=y
-CONFIG_PACKAGE_node=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_KERNEL_PARTSIZE=64
+CONFIG_TARGET_ROOTFS_PARTSIZE=960
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_VDI_IMAGES=y
+CONFIG_VMDK_IMAGES=y
