--- a/x86_64.config
+++ b/x86_64.config
@@ -5,6 +5,7 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_KERNEL_PARTSIZE=64
 CONFIG_TARGET_ROOTFS_PARTSIZE=960
+CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_VDI_IMAGES=y
