--- a/.github/workflows/k3-lede.yml
+++ b/.github/workflows/k3-lede.yml
@@ -20,8 +20,8 @@ on:
         default: 'false'
 
 env:
-  REPO_URL: https://github.com/junpermain/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/junpermain/openwrt
+  REPO_BRANCH: openwrt-21.02
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: k3.config
   DIY_P1_SH: diy-part1.sh
