--- a/k3.config
+++ b/k3.config
@@ -1,6 +1,7 @@
 CONFIG_TARGET_bcm53xx=y
 CONFIG_TARGET_bcm53xx_generic=y
 CONFIG_TARGET_bcm53xx_generic_DEVICE_phicomm_k3=y
-
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
 CONFIG_LUCI_LANG_zh-cn=y
 CONFIG_PACKAGE_ip-tiny=y
